Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14609

XA Transction unable to ROLLBACK TO SAVEPOINT

    XMLWordPrintable

Details

    • 5.5.59

    Description

      It appears it's not possible to restore to an savepoint within in a XA transaction

      create table t1(
      	c1 int
      ) engine=innodb;
       
      XA START 'xa1';
      SAVEPOINT savepoint1;
      INSERT INTO t1 (c1) VALUES (1),(2),(3),(4);
       
      ROLLBACK TO SAVEPOINT savepoint1;
      

      this gives error:
      Error Code: 1399. XAER_RMFAIL: The command cannot be executed when global transaction is in the ACTIVE state

      When i try the exact same query in mysql (5.7), this produces no errors, also the transaction is restored to the actual savepoint.
      When savepoints wouldn't be supported in XA transactions, i would expect the SAVEPOINT x would already result in an error.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              olafbuitelaar Olaf Buitelaar
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.